envoyfilter-teaching/envoyfilter/httpsimple/ef-dynamo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple 
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/instance: dynamo
      app.kubernetes.io/name: dynamodb
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          destinationPort: 8000
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.dynamo
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.dynamo.v3.Dynamo
