envoyfilter-teaching/envoyfilter/httpsimple/ef-ip_tagging.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple 
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ip_tagging
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ip_tagging.v3.IPTagging
          request_type: BOTH
          ip_tags:
          - ip_tag_name: test
            ip_list:
            - address_prefix: 0.0.0.0
              prefix_len: 0
