envoyfilter-teaching/envoyfilter/httpsimple/ef-set_metadata.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple 
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.set_metadata
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.set_metadata.v3.Config
          metadata_namespace: envoy.lb
          value:
            version: v1
